--- a/DNA_flux_example.ipynb
+++ b/DNA_flux_example.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "from __future__ import print_function\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import mdtraj as md\n",
@@ -96,9 +97,9 @@
     }
    ],
    "source": [
-    "print topology.atom(275), topology.atom(494)\n",
-    "print topology.atom(275), topology.atom(488)\n",
-    "print topology.atom(274), topology.atom(491)"
+    "print(topology.atom(275), topology.atom(494))\n",
+    "print(topology.atom(275), topology.atom(488))\n",
+    "print(topology.atom(274), topology.atom(491))"
    ]
   },
   {
@@ -279,7 +280,7 @@
    ],
    "source": [
     "out_interface_frames = [frame for frame in run0 if not interfaces[0](frame)]\n",
-    "print len(out_interface_frames)"
+    "print(len(out_interface_frames))"
    ]
   },
   {
@@ -304,7 +305,7 @@
    ],
    "source": [
     "out_state_frames = [frame for frame in run0 if not state_WC(frame)]\n",
-    "print len(out_state_frames)"
+    "print(len(out_state_frames))"
    ]
   },
   {
@@ -458,7 +459,7 @@
     "out_43 = analyzer.analyze_flux(trajectories=run0,\n",
     "                               state=state_WC,\n",
     "                               interface=iface_43)['out']\n",
-    "print len(out_43)"
+    "print(len(out_43))"
    ]
   },
   {
@@ -479,7 +480,7 @@
     "out_45 = analyzer.analyze_flux(trajectories=run0,\n",
     "                               state=state_WC,\n",
     "                               interface=iface_45)['out']\n",
-    "print len(out_45)"
+    "print(len(out_45))"
    ]
   },
   {
@@ -550,8 +551,8 @@
     "all_shooting_ensemble_43 = paths.AllOutXEnsemble(state_WC) & paths.PartOutXEnsemble(iface_43)\n",
     "segments_43 = all_shooting_ensemble_43.split(run0)\n",
     "plt.hist([len(s) for s in segments_43])\n",
-    "print \"Segments:\", len(segments_43)\n",
-    "print \"Longer than 1 frame:\", len([s for s in segments_43 if len(s) > 1])"
+    "print(\"Segments:\", len(segments_43))\n",
+    "print(\"Longer than 1 frame:\", len([s for s in segments_43 if len(s) > 1]))"
    ]
   },
   {
@@ -591,7 +592,7 @@
     }
    ],
    "source": [
-    "print len(flux_dict_43['out'])"
+    "print(len(flux_dict_43['out']))"
    ]
   },
   {
@@ -608,7 +609,7 @@
     }
    ],
    "source": [
-    "print len(flux_dict_43['in'])"
+    "print(len(flux_dict_43['in']))"
    ]
   },
   {
@@ -626,8 +627,8 @@
     }
    ],
    "source": [
-    "print \"Segments:\", len(all_shooting_43)\n",
-    "print \"Longer than 1 frame:\", len([s for s in all_shooting_43 if len(s) > 1])"
+    "print(\"Segments:\", len(all_shooting_43))\n",
+    "print(\"Longer than 1 frame:\", len([s for s in all_shooting_43 if len(s) > 1]))"
    ]
   },
   {
@@ -651,9 +652,9 @@
     }
    ],
    "source": [
-    "print analyzer.flux(trajectories=runs,\n",
+    "print(analyzer.flux(trajectories=runs,\n",
     "                    state=state_WC,\n",
-    "                    interface=iface_43)"
+    "                    interface=iface_43))"
    ]
   },
   {
@@ -668,21 +669,63 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
